2009-03-01 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c:
	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	* src/core/na-importer.c:
	* src/core/na-importer.h:
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-reader.h:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/test/test-reader.c:
	NAIImporterParms structure is renamed as NAIImporterUriParms.
	'item' member of this same structure is renamed as imported.

	* src/io-gconf/nagp-reader.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-gconf/nagp-writer.h: Cleanup the code.

	* src/nact/nact-iaction-tab.c (setup_toolbar_label):
	Immediately update the toolbar label when it is the same that those
	of the action.

	* src/nact/nact-icommand-tab.c (parse_parameters):
	Fix display of a single '%' char.

	* src/nact/nautilus-actions-config-tool.ui:
	ActionIconLabelLabel field renamed as ActionToolbarLabelLabel.

	* src/io-gconf/nagp-reader.c (read_done_item):
	Only action needs to setup the parent pointer.

	* src/io-gconf/nagp-writer.c (nagp_writer_write_data):
	Only writes non-empty values.

	* src/core/na-object.c (na_object_object_reset_origin):
	No more check for the value of object origin before resetting it.

	* src/core/na-object-item.c
	(na_object_item_remove_item): Improve debug message.
	(copy_children): Refuse to copy when target already has	children.

	* src/nact/nact-main-menubar.c
	(nact_main_menubar_save_items): Do not re-dump all the items hierarchy.
	(save_item): Remove old children after having created the new ones.

	* src/core/na-object-action.c (ifactory_object_read_done):
	Force toolbar label to be the same that action one if flag is set to true.

	* src/api/na-object-api.h: Fix minor typo.

2009-02-28 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c
	(nadp_desktop_file_get_key_file_path):
	No more invalidate the function.

	* src/api/na-ifactory-object.h: