@@ -1,5 +1,10 @@
 2009-03-01 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/api/na-iimporter.h (NAIImporterListParms): New structure.
+
+	* src/core/na-importer.c:
+	* src/core/na-importer.h (na_importer_import_from_list): New function.
+
 	* src/api/na-iimporter.h:
 	* src/core/na-iimporter.c:
 	* src/core/na-importer-ask.c:
